cmake_minimum_required(VERSION 3.4)
add_executable(Client TCPEchoClient4.cpp)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
	include_directories(${OpenCV_INCLUDE_DIRS})
	target_link_libraries(Client ${OpenCV_LIBRARIES} zbar)
else(OpenCV_FOUND)
message(FATAL ERROR "Librarie OpenCV introuvable!")
endif(OpenCV_FOUND)