cmake_minimum_required(VERSION 3.4)
project(Client)
add_executable(Client client.cpp)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
	include_directories(${OpenCV_INCLUDE_DIRS})
	target_link_libraries(Client ${OpenCV_LIBRARIES} zbar)
else(OpenCV_FOUND)
message(FATAL ERROR "Librairie OpenCV introuvable!")
endif(OpenCV_FOUND)